--- a/composer.json
+++ b/composer.json
@@ -15,17 +15,19 @@
     "ramsey/uuid": "^4.7",
     "beberlei/assert": "^3.3"
   },
-    "autoload": {
-        "psr-4": {
-        "DeathGun\\CleanCode\\": "src/"
-        }
-    },
+  "require-dev": {
+    "phpunit/phpunit": "^11.2"
+  },
+  "autoload": {
+    "psr-4": {
+      "DeathGun\\CleanCode\\": "src/"
+    }
+  },
   "autoload-dev": {
     "psr-4": {
       "DeathGun\\CleanCode\\Tests\\": "tests/"
     }
   },
-  "require-dev": {
-    "phpunit/phpunit": "^11.2"
-  }
+  "minimum-stability": "stable",
+  "prefer-stable": true
 }
